# ws_cobot_pjt

./: .gitignore  README.md  perfume_monitor.drawio
ws_cobot1/: env.sh
ws_cobot1/doc/: README.md  gripper_control.py
ws_cobot1/hmi/: cobot1_dash_board.py  cobot1_dash_board.ui  hmi_node.py  main.py  ros2_node.py
ws_cobot1/src/cobot_control/: package.xml  setup.cfg  setup.py
ws_cobot1/src/cobot_control/cobot_control/: control_functions.py  log_dict.py  main.py  main_log.py  main_test.py  main_thread.py  stop_manager.py  thread_test.py  tmp.py
ws_cobot1/src/function_test/: package.xml  setup.cfg  setup.py
ws_cobot1/src/function_test/function_test/: close_lid_test.py  diagonal_shake_test.py  force_and_rotate_test.py  gripper_status.py  mix_draw_circle.py  mix_draw_circle2.py  move.py  move_to_pose.py  moveb_test.py  open_lid_test.py  order_test.py
ws_cobot1/src/perfume_backend/: package.xml  setup.cfg  setup.py
ws_cobot1/src/perfume_backend/frontend/: admin.html  admin.js  admin_login.html  app.js  index.html  style.css
ws_cobot1/src/perfume_backend/perfume_backend/: app.py  robot_control.py  schema.sql
ws_cobot1/src/perfume_hmi/: package.xml  requirements.txt  setup.cfg  setup.py
ws_cobot1/src/perfume_hmi/frontend/: admin.css  admin.html  admin.js  admin_login.html
ws_cobot1/src/perfume_hmi/perfume_hmi/: app.py  robot_bridge.py
ws_cobot1/src/perfume_kiosk/: package.xml  requirements.txt  setup.cfg  setup.py
ws_cobot1/src/perfume_kiosk/frontend/: app.js  index.html  style.css
ws_cobot1/src/perfume_kiosk/perfume_kiosk/: app.py
ws_cobot1/src/perfume_kiosk/perfume_kiosk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ws_cobot1/src/perfume_order_srv/: CMakeLists.txt  package.xml
ws_cobot1/src/perfume_order_srv/srv/: Order.srv
