<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perfume_kiosk</name>
  <version>0.1.0</version>
  <description>조향 자동화 솔루션 키오스크 백엔드 (/order_perfume ROS2 서비스로 제조 요청)</description>
  <maintainer email="jeowryu@gmail.com">jeongwan-ryu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>perfume_order_srv</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
